vote-app/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: db
    labels: 
       name: db
       app: votingapp
spec: 

  template:
    metadata: 
      name: db-app-pod
      labels: 
        name: db-app-pod
        app: votingapp
    spec: 
      containers: 
        - name: db-app
          image: postgres
          ports:
          - containerPort: 5432
  replicas: 1

  selector:
    matchLabels: 
        name: db-app-pod
        app: votingapp
