vote-app/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: redis-app-deploy
    labels: 
       name: redis-app-deploy
       app: votingapp
spec: 

  template:
    metadata: 
      name: redis-app-pod
      labels: 
        name: redis-app-pod
        app: votingapp
    spec: 
      containers: 
        - name: redis-app
          image: redis
          ports:
          - containerPort: 6379
  replicas: 1

  selector:
    matchLabels: 
        name: redis-app-pod
        app: votingapp
