vote-app/result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: result-app-deploy
    labels: 
       name: result-app-deploy
       app: votingapp
spec: 

  template:
    metadata: 
      name: result-app-pod
      labels: 
        name: result-app-pod
        app: votingapp
    spec: 
      containers: 
        - name: result-app
          image: kodekloud/examplevotingapp_result:v1
          ports:
          - containerPort: 80
  replicas: 2

  selector:
    matchLabels: 
        name: result-app-pod
        app: votingapp
