vote-app/nginx-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: ingress
spec:
  type: LoadBalancer
  selector:
    name: nginx-ingress-microk8s
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
