vote-app/postgres-svc.yaml
apiVersion: v1
kind:  Service
metadata:
   name: db
   labels: 
     name: db
     app: votingapp
spec: 
  ports:
    - targetPort: 5432
      port: 5432
  selector: 
      name: db-app-pod
      app: votingapp
