vote-app/redis-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app-deploy
  labels:
    name: redis-app-deploy
    app: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-app
      app: votingapp
  template:
    metadata:
      name: redis-app
      labels:
        name: redis-app
        app: votingapp
    spec:
      containers:
        - name: redis-app
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
    app: votingapp
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis-app
    app: votingapp
