vote-app/result-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    name: result-app-deploy
    app: votingapp
spec:
  replicas: 2
  selector:
    matchLabels:
      name: result-app
      app: votingapp
  template:
    metadata:
      name: result-app
      labels:
        name: result-app
        app: votingapp
    spec:
      containers:
        - name: result-app
          image: dockersamples/examplevotingapp_result
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-app-svc
  labels:
    name: result-app-svc
    app: votingapp
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: result-app
    app: votingapp
