vote-app/result-svc.yaml
apiVersion: v1
kind:  Service
metadata:
   name: result-app-svc
   labels: 
     name: result-app-svc
     app: votingapp
spec: 
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
  selector: 
      name: result-app-pod
      app: votingapp
