vote-app/vote-deploy-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vote-app-deploy
  labels: 
    app: votingapp
    name: vote-app-deploy
spec: 
  replicas: 2
  selector:
    matchLabels: 
      app: votingapp
      name: vote-app
  template:
    metadata: 
      labels: 
        app: votingapp
        name: vote-app
    spec: 
      containers: 
        - name: vote-app
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-app-svc
  labels: 
    app: votingapp
    name: vote-app-svc
spec: 
  selector: 
    app: votingapp
    name: vote-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
