vote-app/vote-result-ingress-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # This rewrites /vote to /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote-app-svc
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-app-svc
            port:
              number: 80
